# pocket-papers

./: .gitignore  .gitmodules  README.md  fix-acme-version-yanked.patch  fresh.gen.ts
.github/workflows/: deploy.yml
backend/.cargo/: config.toml
backend/backend-server/: Cargo.toml  build.rs
backend/backend-server/src/: fs_helpers.rs  logging.rs  main.rs  pocket_papers.rs  route_handlers.rs  trait_helpers.rs
backend/backend-server/typst_files/HTK_SPI_TEMPLATE/: main.typ
backend/backend-server/typst_files/HTK_SPI_Template/: conf.typ  main.typ
backend/backend-server/typst_files/HTK_STL_Template/: main.typ
backend/backend-server/typst_files/HTK_VLT_Template/: conf.typ  main.typ
backend/backend-serverd/: Cargo.toml  build.rs  reverse_proxy.toml
backend/backend-serverd/src/: main.rs
components/meta/: basic-head.tsx
components/navbar/: navbar.tsx
dtb-hosentaschenkarten-native/: create-new.html  package.json
dtb-hosentaschenkarten-native/src/: create-new.tsx
dtb-hosentaschenkarten-native/src-tauri/: Cargo.toml  tauri.conf.json
islands/data/: form.tsx  iframe-response-island.tsx  iframe-response.tsx  importer.tsx
islands/primitives/: styled-input.tsx  styled-select.tsx  (+1 more)
res/: favicon.xcf
routes/: _404.tsx  _app.tsx  create-new.tsx  iframe-response.tsx  import-existing.tsx  imprint.tsx  index.tsx  privacy.tsx
static/: 404.css  create-new.css  empty-iframe.html  general-styles.css  gradient.css  iframe-response.css  import-existing.css  imprint.css  index.css  manifest.json  navbar.css  privacy.css  table.css
utils/: form-state.tsx
(+5 files in other folders)
